fix: Change Nav spacing to space-around

--- a/src/components/header/navBar/Navbar.scss
+++ b/src/components/header/navBar/Navbar.scss
@@ -1,4 +1,4 @@
 .Navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
